# feature-mtp

./: .gitignore  README.md  main.py  pyproject.toml  run-4b-attn-2-0410.sh  run-4b-attn-4-token-2.sh  run-4b-l-32-d-4-t-4.sh  run-4b-lstm-0409.sh  run-dev.sh  run-one.sh
lstm/: fmtp_model.py  lstm_model.py  only_model.py  pretrain.py  train-free.sh  train.sh  training.py
